--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
