--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
+    "fiber": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -27,7 +28,9 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.26.10",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
