--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "fiber": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "sass": "^1.26.10",
+    "typescript": "^3.9.7",
     "validator": "^13.1.1"
   },
   "devDependencies": {
