--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-calendar": "^3.1.0",
     "sass": "^1.26.10",
     "typescript": "^3.9.7",
     "validator": "^13.1.1"
